--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>IWT PROJECT INTRO PAGE</title>
 	<link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="ambarsari_kulche.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<div class="row heading">
