--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</div>
 
 		<div class="image">
-			<img src="C:\Users\LENOVO\Desktop\WEB DEVELOPMENT ANGELA YU\jatin_twitter.png">
+			<img src="https://pbs.twimg.com/profile_images/1241098820168978437/HUuK4Y5E_400x400.jpg">
 			<h3 class="name">Jatin</h3>
 		</div>
 	</div>
