--- a/index.html
+++ b/index.html
@@ -8,29 +8,7 @@
 </head>
 <body>
 	<div class="row heading">
-		<h1>WELCOME TO OUR TEAM!<span style="color: red">❤</span></h1>
-	</div>
-
-	<div class="row">
-		<div class="image">
-			<img class="img1" src="anmol1.jpeg">
-			<h3 class="name">Anmol</h3>
-		</div>
-
-		<div class="image">
-			<img class="img1" src="meet.jpeg">
-			<h3 class="name">Harmeet</h3>
-		</div>
-
-		<div class="image">
-			<img class="img1" src="gursimar.jpeg">
-			<h3 class="name">Gursimar</h3>
-		</div>
-
-		<div class="image">
-			<img  class="img1" src="https://pbs.twimg.com/profile_images/1241098820168978437/HUuK4Y5E_400x400.jpg">
-			<h3 class="name">Jatin</h3>
-		</div>
+		<h1>THE SIMON GAME !<span style="color: red">❤</span></h1>
 	</div>
 
 
@@ -71,6 +49,33 @@
 
 		</form>
 		
+	</div>
+	
+	
+	
+	<div class="game_description>MEET OUR TEAM !👨‍💻</div>
+	
+	
+	<div class="row">
+		<div class="image">
+			<img class="img1" src="anmol1.jpeg">
+			<h3 class="name">Anmol</h3>
+		</div>
+
+		<div class="image">
+			<img class="img1" src="meet.jpeg">
+			<h3 class="name">Harmeet</h3>
+		</div>
+
+		<div class="image">
+			<img class="img1" src="gursimar.jpeg">
+			<h3 class="name">Gursimar</h3>
+		</div>
+
+		<div class="image">
+			<img  class="img1" src="https://pbs.twimg.com/profile_images/1241098820168978437/HUuK4Y5E_400x400.jpg">
+			<h3 class="name">Jatin</h3>
+		</div>
 	</div>
 
 </body>
