--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	
 	
 	
-	<div class="game_description><h1>MEET OUR TEAM !👨‍💻</h1></div>
+	<div class="game_description><h1>MEET OUR TEAM !</h1></div>
 	
 	
 	<div class="row">
